mern-ecommerce/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-srv
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
